Update and rename 2024-10-28-Fixed to 2024-10-28-Fixed.md

--- a/_posts/2024-10-28-Fixed.md
+++ b/_posts/2024-10-28-Fixed.md
@@ -3,7 +3,7 @@ layout: post
 title: Upload fixed
 ---
 
-Upload is fixed now.. had to reconfigure some things with our server. 
+Upload is fixed now (i think).. had to reconfigure some things with our server. 
 I might have to remove that as a step in the future.. shits making things complicated. 
 I'm not entirely sure if ya'll commits will go through.. i don't have a hold of your .md files.. won't be able to reupload your shit. 
 Anyway, I've enabled our internal blog and created a janky ass solution that somehow connects it to our external blog.. 
